[package]
name = "bv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
serde = { version = "1.0.162", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
