[package]
name = "bv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
grep = "0.2.11"
grep-regex = "0.1.11"
grep-searcher = "0.1.11"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
